--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
     </div>
     
     <!-- 小軟走來走去動畫 -->
-    <img src="https://cdn.openai.com/chat-assets/user-uploads/file_00000000c750622fa439cd12556290b8.png" alt="小軟" class="cat-walking" />
+    <img src="images/xiaoruan.png" alt="小軟" class="cat-walking" />
 
     <!-- 記事編輯模態框 -->
     <div id="noteModal" class="modal">
