--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                         <div class="card-icon icon-about"></div>
                         <h3>💫 關於小軟</h3>
                     </div>
-                    <p>認識我們家的小公主！小軟是一隻充滿魅力的貓咪，擁有獨特的個性和無窮的可愛魅力。</p>
+                    <p>認識我們家的小帥哥！小軟是一隻充滿魅力的男子漢貓咪，擁有獨特的個性和帥氣的魅力。</p>
                 </div>
             </div>
         </main>
@@ -369,7 +369,7 @@
                         break;
                     case '關於我':
                         header.textContent = '💫 關於小軟';
-                        description.textContent = '認識我們家的小公主，了解小軟貓咪的可愛故事';
+                        description.textContent = '認識我們家的小帥哥，了解小軟貓咪的帥氣故事';
                         break;
                     case '聯絡方式':
                         header.textContent = '📧 聯絡方式';
