--- a/index.html
+++ b/index.html
@@ -246,8 +246,8 @@
             bottom: 20px;
             right: 20px;
             z-index: 1000;
-            width: 80px;
-            height: 80px;
+            width: 120px;
+            height: 120px;
             border-radius: 50%;
             cursor: pointer;
             transition: all 0.3s ease;
@@ -270,15 +270,15 @@
 
         #xiaoruan-bubble {
             position: fixed;
-            bottom: 120px;
+            bottom: 160px;
             right: 20px;
-            max-width: 280px;
+            max-width: 300px;
             background: rgba(255, 255, 255, 0.95);
             backdrop-filter: blur(10px);
             color: #555;
-            padding: 15px 20px;
-            font-size: 14px;
-            line-height: 1.6;
+            padding: 18px 22px;
+            font-size: 15px;
+            line-height: 1.7;
             font-family: "Microsoft JhengHei", "微軟正黑體", sans-serif;
             border-radius: 20px 20px 5px 20px;
             box-shadow: 0 8px 32px rgba(0,0,0,0.15);
@@ -487,18 +487,14 @@
         const xiaoruanBtn = document.getElementById('xiaoruan-btn');
         const bubble = document.getElementById('xiaoruan-bubble');
         const quotes = [
-            "喵～歡迎來到我的Beauty世界！✨",
-            "今天也要美美的哦～ 🌸",
-            "記得要按時吃飯，就像我一樣！😋",
-            "累了就休息一下，學學我的慵懶哲學～ 😴",
-            "每天都要保持好心情，像我這樣～ 😊",
-            "別忘了給自己一點甜蜜時光 🍰",
-            "生活要像馬卡龍一樣，甜甜軟軟的～ 💕",
-            "陪我一起看看日落吧～ 🌅",
-            "今天的你也很棒哦！給自己一個讚 👍",
-            "喵嗚～想和你分享今天的小確幸 🌟",
-            "記得要多喝水，保持水潤美麗 💧",
-            "偶爾偷個懶也沒關係的啦～ 😸"
+            "這個世界太喧囂，我只想靜靜地陪妳。",
+            "若妳迷路了，我會是妳的方向。",
+            "我不是路過，是為妳停下的。",
+            "我不會問為什麼不說，只會陪妳沉默。",
+            "即使妳不說，我也會留在這裡。",
+            "這城市再大，也找得到妳。",
+            "如果風太冷，我可以是妳的風衣。",
+            "放心吧，我不會走丟，就算妳先離開。"
         ];
 
         xiaoruanBtn.addEventListener('click', () => {
@@ -514,7 +510,7 @@
             
             setTimeout(() => {
                 bubble.style.display = 'none';
-            }, 4000);
+            }, 5000);
         });
     </script>
 </body>
