--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                 首頁
             </a>
             
-            <a href="#" class="menu-item">
+            <a href="calendar.html" class="menu-item">
                 <span class="icon icon-calendar"></span>
                 小軟2025行事曆 🐱
             </a>
