--- a/index.html
+++ b/index.html
@@ -541,10 +541,23 @@
             });
 
             // 顯示目標區域
-            document.getElementById(sectionId).classList.add('active');
+            const targetSection = document.getElementById(sectionId);
+            if (targetSection) {
+                targetSection.classList.add('active');
+            }
             
             // 添加active類到對應的導航鏈接
-            event.target.classList.add('active');
+            const targetLink = document.querySelector(`a[href="#${sectionId}"]`);
+            if (targetLink) {
+                targetLink.classList.add('active');
+            }
+            
+            // 如果是行事曆頁面，確保初始化
+            if (sectionId === 'calendar') {
+                setTimeout(() => {
+                    generateCalendar(currentMonth, currentYear);
+                }, 100);
+            }
         }
 
         // 行事曆功能
@@ -642,4 +655,4 @@
                 const stories = [
                     `📖 ${prompt}\n\n在一個飄著馬卡龍香味的午後，小軟睜開了惺忪的眼睛。陽光透過蕾絲窗簾，在地板上投下美麗的光影。\n\n"今天要做什麼好呢？"小軟伸了個懶腰，優雅地跳下了他的專屬小床。突然，一陣奇異的光芒從花園傳來...\n\n小軟好奇地走向窗邊，發現花園裡竟然開滿了會發光的花朵！每一朵花都散發著不同顏色的溫柔光芒，就像活著的馬卡龍一樣。\n\n這將是一個充滿魔法的故事開始...`,
                     `🌟 ${prompt}\n\n勳勳打開了神秘的寶箱，裡面閃爍著七彩的光芒。"這是什麼？"他輕聲自語，小心翼翼地取出一個精美的水晶球。\n\n水晶球中浮現出一個美麗的世界，那裡有彩虹瀑布、會唱歌的樹木，還有友善的獨角獸在草地上奔跑。\n\n"我想去那個地方看看！"勳勳握緊水晶球，閉上眼睛許下心願。突然間，他感覺身體變得輕飄飄的...\n\n當他再次睜開眼睛時，已經站在了那個夢幻般的世界裡！`,
-                    `🌸 ${prompt}\n\n麟麟在圖書館的角落發現了一本古老的日記。封面上寫著"花語秘典"，散發著淡淡的花香。\n\n她好奇地翻開第一頁，上面寫著："每一朵花都有自己的語言，只有用心傾聽，才能理解它們的秘密。"\n\n麟麟決定按照日記上的指引，來到了後院的小花園。她輕撫著一朵粉色的玫瑰，閉上眼睛仔細聆聽...\n\n"你好，親愛的。"一個溫柔的聲音在她心中響起。麟麟驚喜地發現，她真的能聽
+                    `🌸 ${prompt}\n\n麟麟在圖書館的角落發現了一本古老的日記。封面上寫著"花語秘典"，散發著淡淡的花香。\n\n她好奇地翻開第一頁，上面寫著："每一朵花都有自己的語言，只有用心傾聽，才能理解它們的秘密。"\n\n麟麟決定按照日記上的指引，來到了後院的小花園。她輕撫著一朵粉色的玫瑰，閉上眼睛仔細聆聽...\n\n"你好，親愛的。"一個溫柔的聲音在她心中響起。麟麟驚喜地發現，她真的能聽到花朵的心聲！\n\n從此，麟麟的世界變得更加豐富多彩，每一朵花都成了她最好的朋友...`
