--- a/index.html
+++ b/index.html
@@ -577,12 +577,12 @@
                 相片集
             </a>
 
-            <a href="#" class="menu-item" data-page="xunxun">
+            <a href="xunxun-game.html" class="menu-item">
                 <span class="icon icon-xunxun"></span>
                 勳勳的小世界 🎮
             </a>
 
-            <a href="#" class="menu-item" data-page="linlin">
+            <a href="linlin-drawing.html" class="menu-item">
                 <span class="icon icon-linlin"></span>
                 麟麟的小天地 🎨
             </a>
