--- a/index.html
+++ b/index.html
@@ -792,7 +792,11 @@
                 } else if (pageType === 'xiaoruan-chat') {
                     document.getElementById('xiaoruan-chat-content').style.display = 'block';
                     // 初始化內嵌版小軟聊天
-                    setTimeout(() => initXiaoruanChatInline(), 100);
+                    setTimeout(() => {
+                        if (typeof initXiaoruanChatInline === 'function') {
+                            initXiaoruanChatInline();
+                        }
+                    }, 200);
                 } else {
                     document.getElementById('home-content').style.display = 'block';
                 }
