xiaoruan-chat.html

--- a/xiaoruan-chat.html
+++ b/xiaoruan-chat.html
@@ -459,7 +459,7 @@
                 this.isTyping = false;
                 
                 // 直接使用你的 Replit 服務器地址
-                this.baseUrl = 'https://workspace--badbeautyzx.repl.co';
+                this.baseUrl = 'https://791f59a3-0c48-41fc-963c-67df73bf8443-00-gxs3080kth8w.sisko.replit.dev/';
                 
                 this.xiaoruanPersonality = `你是小軟，一隻可愛聰明的貓咪AI助手。你的個性特點：
 - 溫暖友善，喜歡用貓咪的方式表達（偶爾會說"喵"）
