xiaoruan-chat.html

--- a/xiaoruan-chat.html
+++ b/xiaoruan-chat.html
@@ -486,7 +486,7 @@
             }
 
             async callChatAPI(message) {
-                const url = '/chat';
+                const url = 'https://791f59a3-0c48-41fc-963c-67df73bf8443-00-gxs3080kth8w.sisko.replit.dev/chat';
                 
                 const conversationContext = this.chatHistory.slice(-6).map(msg => 
                     { return { content: msg.content, isUser: msg.isUser }; }
