xiaoruan-chat.html

--- a/xiaoruan-chat.html
+++ b/xiaoruan-chat.html
@@ -521,7 +521,7 @@
                 this.chatHistory = [];
                 this.isTyping = false;
                 this.userId = this.generateUserId();
-                this.apiBaseUrl = 'https://3c4ea57e-4cf5-40ce-ba57-b0de16325f66-00-1qvzi4gfy70gn.sisko.replit.dev';
+                this.apiBaseUrl = 'https://3c4ea57e-4cf5-40ce-ba57-b0de16325f66-00-1qvzi4gfy70gn.sisko.replit.dev/chat/';
                 this.isConnected = false;
                 this.reconnectAttempts = 0;
                 this.maxReconnectAttempts = 3;
